--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:description="@string/app_description"
-        android:icon="@drawable/hugelogo"
+        android:icon="@drawable/ic_launcher"
         android:label="OSBridge" >
         <activity
             android:name="org.opensourcebridge.navigator.Main"
